--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
     background-color: #ac4142;
 }
 .highlight .c,
-.highlight .c1,
 .highlight .cd,
 .highlight .cm,
+.highlight .c1,
 .highlight .cs {
     color: #888;
 }
@@ -50,43 +50,43 @@
     color: #aa759f;
 }
 .highlight .kc,
-.highlight .kd,
-.highlight .kt {
+.highlight .kt,
+.highlight .kd {
     color: #d28445;
 }
 .highlight .s,
-.highlight .s1,
-.highlight .s2,
 .highlight .sb,
 .highlight .sc,
 .highlight .sd,
+.highlight .s2,
 .highlight .sh,
-.highlight .sx {
+.highlight .sx,
+.highlight .s1 {
     color: #90a959;
 }
 .highlight .sr {
     color: #75b5aa;
 }
-.highlight .se,
-.highlight .si {
+.highlight .si,
+.highlight .se {
     color: #8f5536;
 }
-.highlight .nc,
+.highlight .nt,
 .highlight .nn,
-.highlight .no,
-.highlight .nt {
+.highlight .nc,
+.highlight .no {
     color: #f4bf75;
 }
 .highlight .na {
     color: #6a9fb5;
 }
-.highlight .il,
 .highlight .m,
-.highlight .mb,
 .highlight .mf,
 .highlight .mh,
 .highlight .mi,
+.highlight .il,
 .highlight .mo,
+.highlight .mb,
 .highlight .mx {
     color: #90a959;
 }
@@ -109,7 +109,7 @@ body {
 }
 section {
     display: block;
-    margin: 0 0 20px;
+    margin: 0 0 20px 0;
 }
 h1,
 h2,
@@ -123,11 +123,11 @@ li {
     line-height: 1.4;
 }
 header {
-    background: rgba(0,0,0,0.1);
+    background: rgba(0, 0, 0, 0.1);
     width: 100%;
     border-bottom: 1px dashed #b5e853;
     padding: 20px 0;
-    margin: 0 0 40px;
+    margin: 0 0 40px 0;
 }
 header h1 {
     font-size: 30px;
@@ -136,7 +136,7 @@ header h1 {
     font-weight: bold;
     font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
     color: #b5e853;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.1),0 0 5px rgba(181,232,83,0.1),0 0 10px rgba(181,232,83,0.1);
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
     letter-spacing: -1px;
     -webkit-font-smoothing: antialiased;
 }
@@ -176,7 +176,7 @@ h6 {
     font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
     color: #b5e853;
     letter-spacing: -0.03em;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.1),0 0 5px rgba(181,232,83,0.1),0 0 10px rgba(181,232,83,0.1);
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 }
 #main_content h1 {
     font-size: 30px;
@@ -193,13 +193,13 @@ h6 {
 #main_content h5 {
     font-size: 12px;
     text-transform: uppercase;
-    margin: 0 0 5px;
+    margin: 0 0 5px 0;
 }
 #main_content h6 {
     font-size: 12px;
     text-transform: uppercase;
     color: #999;
-    margin: 0 0 5px;
+    margin: 0 0 5px 0;
 }
 dt {
     font-style: italic;
@@ -214,8 +214,8 @@ blockquote {
     border-left: 1px dotted #666;
 }
 pre {
-    background: rgba(0,0,0,0.9);
-    border: 1px solid rgba(255,255,255,0.15);
+    background: rgba(0, 0, 0, 0.9);
+    border: 1px solid rgba(255, 255, 255, 0.15);
     padding: 10px;
     font-size: 16px;
     color: #b5e853;
@@ -225,16 +225,16 @@ pre {
     overflow-y: hidden;
 }
 code.highlighter-rouge {
-    background: rgba(0,0,0,0.9);
-    border: 1px solid rgba(255,255,255,0.15);
-    padding: 0 3px;
-    margin: 0 -3px;
+    background: rgba(0, 0, 0, 0.9);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    padding: 0px 3px;
+    margin: 0px -3px;
     color: #aa759f;
     border-radius: 2px;
 }
 table {
     width: 100%;
-    margin: 0 0 20px;
+    margin: 0 0 20px 0;
 }
 th {
     text-align: left;
@@ -252,22 +252,22 @@ hr {
 }
 .btn {
     display: inline-block;
-    background: -webkit-linear-gradient(top, rgba(40,40,40,0.3), rgba(35,35,35,0.3) 50%, rgba(10,10,10,0.3) 50%, rgba(0,0,0,0.3));
+    background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
     padding: 8px 18px;
     border-radius: 50px;
-    border: 2px solid rgba(0,0,0,0.7);
-    border-bottom: 2px solid rgba(0,0,0,0.7);
+    border: 2px solid rgba(0, 0, 0, 0.7);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.7);
     border-top: 2px solid #000;
-    color: rgba(255,255,255,0.8);
+    color: rgba(255, 255, 255, 0.8);
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
     font-size: 13px;
     text-decoration: none;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.75);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
 }
 .btn:hover {
-    background: -webkit-linear-gradient(top, rgba(40,40,40,0.6), rgba(35,35,35,0.6) 50%, rgba(10,10,10,0.8) 50%, rgba(0,0,0,0.8));
+    background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
 }
 .btn .icon {
     display: inline-block;
@@ -282,10 +282,10 @@ hr {
 }
 a {
     color: #63c0f5;
-    text-shadow: 0 0 5px rgba(104,182,255,0.5);
+    text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
 }
-.cf:after,
-.cf:before {
+.cf:before,
+.cf:after {
     content: "";
     display: table;
 }
